--- a/.github/workflows/master_azapp-cpss-integration-staging-ui-001.yml
+++ b/.github/workflows/master_azapp-cpss-integration-staging-ui-001.yml
@@ -1,8 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
-name: Build and deploy Python app to Azure Web App - azapp-cpss-integration-staging-ui-001
+name: Deploy Python app to Azure Web App - azapp-cpss-integration-staging-ui-001
 
 on:
   push:
@@ -11,50 +7,32 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python version
-        uses: actions/setup-python@v5
+      # Cache pip dependencies to speed up installs (optional if you run tests)
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
         with:
-          python-version: '3.9'
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-      
+      # Install deps only if you need tests / linting before deploy
+      # Remove this step if Azure will handle installing from requirements.txt
       - name: Install dependencies
         run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-app
-          path: |
-            .
-            !venv/
+      # Optional: run tests (skip if not needed)
+      # - name: Run tests
+      #   run: pytest
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: python-app
-      
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
         with:
           app-name: 'azapp-cpss-integration-staging-ui-001'
           slot-name: 'Production'
